--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-fontawesome": "^1.7.1",
     "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
     "tsparticles": "^1.34.0",
     "web-vitals": "^1.1.2"
