--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
@@ -63,5 +62,8 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Veenakrishna2313/Portfolio-Website/issues"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
