--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-particles-js": "^3.5.3",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-share": "^4.4.0",
@@ -28,12 +29,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-     "predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
   },
   "eslintConfig": {
     "extends": [
