--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-fontawesome": "^1.7.1",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
@@ -28,7 +28,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
